tomas/p4/y.output
Grammar

    0 $accept: program $end

    1 program: IDENTIFIER '(' parameters ')' '=' expression

    2 parameters: parameter
    3           | parameters ',' parameter

    4 parameter: INTEGER IDENTIFIER
    5          | DOUBLE IDENTIFIER

    6 arguments: expression
    7          | arguments ',' expression

    8 expression: IDENTIFIER
    9           | NATURAL
   10           | DECIMAL
   11           | IDENTIFIER '(' arguments ')'
   12           | IF expression THEN expression ELSE expression
   13           | expression '+' expression
   14           | expression '-' expression
   15           | expression '*' expression
   16           | expression '/' expression
   17           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 1 11 17
    ')' (41) 1 11 17
    '*' (42) 15
    '+' (43) 13
    ',' (44) 3 7
    '-' (45) 14
    '/' (47) 16
    '=' (61) 1
    error (256)
    INTEGER (258) 4
    DOUBLE (259) 5
    IF (260) 12
    THEN (261) 12
    ELSE (262) 12
    IDENTIFIER <token> (263) 1 4 5 8 11
    NATURAL <token> (264) 9
    DECIMAL <token> (265) 10
    LOW (266)


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    program <node> (21)
        on left: 1
        on right: 0
    parameters <node> (22)
        on left: 2 3
        on right: 1 3
    parameter <node> (23)
        on left: 4 5
        on right: 2 3
    arguments <node> (24)
        on left: 6 7
        on right: 7 11
    expression <node> (25)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 1 6 7 12 13 14 15 16 17


State 0

    0 $accept: • program $end
    1 program: • IDENTIFIER '(' parameters ')' '=' expression

    IDENTIFIER  shift, and go to state 1

    program  go to state 2


State 1

    1 program: IDENTIFIER • '(' parameters ')' '=' expression

    '('  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: IDENTIFIER '(' • parameters ')' '=' expression
    2 parameters: • parameter
    3           | • parameters ',' parameter
    4 parameter: • INTEGER IDENTIFIER
    5          | • DOUBLE IDENTIFIER

    INTEGER  shift, and go to state 5
    DOUBLE   shift, and go to state 6

    parameters  go to state 7
    parameter   go to state 8


State 4

    0 $accept: program $end •

    $default  accept


State 5

    4 parameter: INTEGER • IDENTIFIER

    IDENTIFIER  shift, and go to state 9


State 6

    5 parameter: DOUBLE • IDENTIFIER

    IDENTIFIER  shift, and go to state 10


State 7

    1 program: IDENTIFIER '(' parameters • ')' '=' expression
    3 parameters: parameters • ',' parameter

    ')'  shift, and go to state 11
    ','  shift, and go to state 12


State 8

    2 parameters: parameter •

    $default  reduce using rule 2 (parameters)


State 9

    4 parameter: INTEGER IDENTIFIER •

    $default  reduce using rule 4 (parameter)


State 10

    5 parameter: DOUBLE IDENTIFIER •

    $default  reduce using rule 5 (parameter)


State 11

    1 program: IDENTIFIER '(' parameters ')' • '=' expression

    '='  shift, and go to state 13


State 12

    3 parameters: parameters ',' • parameter
    4 parameter: • INTEGER IDENTIFIER
    5          | • DOUBLE IDENTIFIER

    INTEGER  shift, and go to state 5
    DOUBLE   shift, and go to state 6

    parameter  go to state 14


State 13

    1 program: IDENTIFIER '(' parameters ')' '=' • expression
    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 20


State 14

    3 parameters: parameters ',' parameter •

    $default  reduce using rule 3 (parameters)


State 15

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   12           | IF • expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 21


State 16

    8 expression: IDENTIFIER •  [$end, THEN, ELSE, '+', '-', '*', '/', ')', ',']
   11           | IDENTIFIER • '(' arguments ')'

    '('  shift, and go to state 22

    $default  reduce using rule 8 (expression)


State 17

    9 expression: NATURAL •

    $default  reduce using rule 9 (expression)


State 18

   10 expression: DECIMAL •

    $default  reduce using rule 10 (expression)


State 19

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'
   17           | '(' • expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 23


State 20

    1 program: IDENTIFIER '(' parameters ')' '=' expression •  [$end]
   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 1 (program)


State 21

   12 expression: IF expression • THEN expression ELSE expression
   13           | expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    THEN  shift, and go to state 28
    '+'   shift, and go to state 24
    '-'   shift, and go to state 25
    '*'   shift, and go to state 26
    '/'   shift, and go to state 27


State 22

    6 arguments: • expression
    7          | • arguments ',' expression
    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   11           | IDENTIFIER '(' • arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    arguments   go to state 29
    expression  go to state 30


State 23

   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression
   17           | '(' expression • ')'

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ')'  shift, and go to state 31


State 24

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   13           | expression '+' • expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 32


State 25

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   14           | expression '-' • expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 33


State 26

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   15           | expression '*' • expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 34


State 27

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   16           | expression '/' • expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 35


State 28

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   12           | IF expression THEN • expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 36


State 29

    7 arguments: arguments • ',' expression
   11 expression: IDENTIFIER '(' arguments • ')'

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


State 30

    6 arguments: expression •  [')', ',']
   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 6 (arguments)


State 31

   17 expression: '(' expression ')' •

    $default  reduce using rule 17 (expression)


State 32

   13 expression: expression • '+' expression
   13           | expression '+' expression •  [$end, THEN, ELSE, '+', '-', ')', ',']
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 13 (expression)

    Conflict between rule 13 and token '+' resolved as reduce (%left '+').
    Conflict between rule 13 and token '-' resolved as reduce (%left '-').
    Conflict between rule 13 and token '*' resolved as shift ('+' < '*').
    Conflict between rule 13 and token '/' resolved as shift ('+' < '/').


State 33

   13 expression: expression • '+' expression
   14           | expression • '-' expression
   14           | expression '-' expression •  [$end, THEN, ELSE, '+', '-', ')', ',']
   15           | expression • '*' expression
   16           | expression • '/' expression

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 14 (expression)

    Conflict between rule 14 and token '+' resolved as reduce (%left '+').
    Conflict between rule 14 and token '-' resolved as reduce (%left '-').
    Conflict between rule 14 and token '*' resolved as shift ('-' < '*').
    Conflict between rule 14 and token '/' resolved as shift ('-' < '/').


State 34

   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   15           | expression '*' expression •  [$end, THEN, ELSE, '+', '-', '*', '/', ')', ',']
   16           | expression • '/' expression

    $default  reduce using rule 15 (expression)

    Conflict between rule 15 and token '+' resolved as reduce ('+' < '*').
    Conflict between rule 15 and token '-' resolved as reduce ('-' < '*').
    Conflict between rule 15 and token '*' resolved as reduce (%left '*').
    Conflict between rule 15 and token '/' resolved as reduce (%left '/').


State 35

   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression
   16           | expression '/' expression •  [$end, THEN, ELSE, '+', '-', '*', '/', ')', ',']

    $default  reduce using rule 16 (expression)

    Conflict between rule 16 and token '+' resolved as reduce ('+' < '/').
    Conflict between rule 16 and token '-' resolved as reduce ('-' < '/').
    Conflict between rule 16 and token '*' resolved as reduce (%left '*').
    Conflict between rule 16 and token '/' resolved as reduce (%left '/').


State 36

   12 expression: IF expression THEN expression • ELSE expression
   13           | expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    ELSE  shift, and go to state 39
    '+'   shift, and go to state 24
    '-'   shift, and go to state 25
    '*'   shift, and go to state 26
    '/'   shift, and go to state 27


State 37

   11 expression: IDENTIFIER '(' arguments ')' •

    $default  reduce using rule 11 (expression)


State 38

    7 arguments: arguments ',' • expression
    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 40


State 39

    8 expression: • IDENTIFIER
    9           | • NATURAL
   10           | • DECIMAL
   11           | • IDENTIFIER '(' arguments ')'
   12           | • IF expression THEN expression ELSE expression
   12           | IF expression THEN expression ELSE • expression
   13           | • expression '+' expression
   14           | • expression '-' expression
   15           | • expression '*' expression
   16           | • expression '/' expression
   17           | • '(' expression ')'

    IF          shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    NATURAL     shift, and go to state 17
    DECIMAL     shift, and go to state 18
    '('         shift, and go to state 19

    expression  go to state 41


State 40

    7 arguments: arguments ',' expression •  [')', ',']
   13 expression: expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 7 (arguments)


State 41

   12 expression: IF expression THEN expression ELSE expression •  [$end, THEN, ELSE, ')', ',']
   13           | expression • '+' expression
   14           | expression • '-' expression
   15           | expression • '*' expression
   16           | expression • '/' expression

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 12 (expression)

    Conflict between rule 12 and token '+' resolved as shift (LOW < '+').
    Conflict between rule 12 and token '-' resolved as shift (LOW < '-').
    Conflict between rule 12 and token '*' resolved as shift (LOW < '*').
    Conflict between rule 12 and token '/' resolved as shift (LOW < '/').
